[tool.poetry]
name = "juliabyexample"
version = "0.1.0"
description = ""
authors = ["javier1nc <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
grablib = "^0.8"
jinja2 = "^2.11.3"
markdown2 = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
